@@ -16,7 +16,7 @@ obj-test_manyunits	 = test_manyunits.$o test_manyunits2.$o
 test_manyunits.$(bin): $(obj-test_manyunits) $(STXXL_LIBDEPS)
 	$(call LINK_STXXL, $(obj-test_manyunits))
 
-ifneq (,$(wildcard .svn))
+ifneq (,$(wildcard .svn ../.git))
 version.$(lo): STXXL_COMPILER_OPTIONS += -DHAVE_VERSION_SVN_DEFS
 endif
 
